kubernetes/apps/network/internal/remote-services/services/plex.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-plex
  namespace: network
spec:
  ports:
    - port: 32400
      protocol: TCP
      targetPort: 32400
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-plex
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-plex
addressType: IPv4
ports:
  - port: 32400
endpoints:
  - addresses:
    - zeus.nas.home.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-plex
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "plex"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "plex"
    gethomepage.dev/description: "Plex Media Server"
    gethomepage.dev/href: "https://plex.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "plex.png"
    gethomepage.dev/widget.type: "plex"
    gethomepage.dev/widget.url: http://zeus.nas.home.internal:32400
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_PLEX_KEY}"
    gethomepage.dev/siteMonitor: http://zeus.nas.home.internal:32400
spec:
  ingressClassName: internal
  rules:
    - host: "plex.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-plex
              port:
                number: 32400
  tls:
    - hosts:
        - "plex.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
